--- a/package.json
+++ b/package.json
@@ -6,11 +6,33 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^1.1.1",
     "cra-template": "1.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "axios": "0.21.1",
+    "axios-mock-adapter": "1.19.0",
+    "babel-plugin-react-intl": "5.1.18",
+    "classnames": "2.2.6",
+    "formik": "2.2.1",
+    "formik-material-ui": "3.0.0",
+    "formik-material-ui-lab": "0.0.7",
+    "formik-material-ui-pickers": "0.0.11",
+    "history": "5.0.0",
+    "html-to-draftjs": "1.5.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.2",
+    "universal-cookie": "4.0.4",
+    "uppy": "1.21.2",
+    "web-vitals": "0.2.4",
+    "wnumb": "1.2.0",
+    "xlsx": "^0.17.1",
+    "yarn": "1.21.1",
+    "yup": "0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +57,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/sortablejs": "^1.10.6",
+    "eslint": "^7.8.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-react": "^7.20.6"
   }
 }
